tests/paczka1/fuzzy1/95632651.err
Error in line 8: 6YFlDM A868 35,0
Error in line 17: Kzerjc1nKjK A171 76,7
Error in line 12: 6YFlDM A171 3,8
Error in line 26: A770 A978 0,0
